--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -32,6 +32,7 @@ body {
   box-sizing: border-box;
   font-size: 1.6rem;
   font-family: "Red Hat Display", sans-serif;
+  height: 100vh;
 }
 
 img {
