--- a/scss/card/_card.scss
+++ b/scss/card/_card.scss
@@ -3,6 +3,7 @@
   justify-content: center;
   align-items: center;
   width: 100%;
+  height: 100vh;
   padding: 5rem 0;
   background-color: $color-primary-1;
 
