--- a/scss/main.css
+++ b/scss/main.css
@@ -16,6 +16,7 @@ body {
           box-sizing: border-box;
   font-size: 1.6rem;
   font-family: "Red Hat Display", sans-serif;
+  height: 100vh;
 }
 
 img {
@@ -53,6 +54,7 @@ a {
       -ms-flex-align: center;
           align-items: center;
   width: 100%;
+  height: 100vh;
   padding: 5rem 0;
   background-color: #e0e8ff;
 }
